<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">p180</string>
    <string name="hello_world">Первое приложение</string>
    <string name="action_settings">Settings</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">start</string>
    <string name="stop">стоп</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="strHistory">История</string>
    <string name="strStat">Статистика</string>
    <string name="title_activity_static">StaticActivity</string>
    <string name="dateView">Date</string>
    <string name="distanceView">Distanse</string>
    <string name="timeView">Time</string>

</resources>
