<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tvTitleGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_gps"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/tvEnabledGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tvStatusGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tvLocationGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tvTitleNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/provider_network"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/tvEnabledNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnLocationSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/location_settings" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStop"
            android:text="@string/stop" />

    </LinearLayout>

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chronometer" />

</LinearLayout>